# bons8i

./: .gitignore  README.md  renovate.json
.github/workflows/: external-probe.yaml  status-page.yaml
base/: README.md
base/gateway/: gateway.yaml  httproute.yaml  ingress.yaml  kustomization.yaml
base/postgres/: secret.yaml  service.yaml  statefulset.yaml
base/web/: deployment.yaml  service.yaml
clusters/: README.md
clusters/gke/: README.md
clusters/kind/: README.md  cilium-values.yaml  kind-config.yaml
clusters/pi/: README.md  bons8i-RaspberryPi5.architecture.drawio  cilium-values.yaml
clusters/pi/argocd/: root-app.yaml
clusters/pi/cloudflared/: configmap.yaml  deployment.yaml  externalsecret-credentials.yaml  kustomization.yaml  networkpolicy.yaml  sealedsecret-credentials.yaml  serviceaccount.yaml
clusters/pi/external-secrets/: clustersecretstore.yaml  kustomization.yaml  vmpodscrape.yaml
clusters/pi/forgejo/: kustomization.yaml  sealedsecret.yaml  service.yaml  (+1 more)
docs/: dr-runbook.md
docs/postmortems/: 2026-07-10-nvme-apst-hang.md  2026-07-11-nvme-bg4-drive-failure.md
docs/runbook/: dr-secrets.md
infra/aws/: .terraform.lock.hcl  backend.tf  iam.tf  lambda.tf  locals.tf  monitoring.tf  outputs.tf  scheduler.tf  versions.tf
overlays/: README.md
overlays/kind/: kustomization.yaml
scripts/: deploy-probe.sh  dr-drill.sh  etcd-backup.sh
scripts/render-architecture/: package-lock.json  package.json  render.mjs
web/status-page/: .dockerignore  .gitignore  Dockerfile
web/status-page/server/: Cargo.toml
web/status-page/server/src/: cache.rs  main.rs  types.rs  upstream.rs
(+43 files in other folders)
