[package]
name = "status-page"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
chrono = { version = "0.4.45", features = ["serde"] }
mime_guess = "2.0.5"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rust-embed = "8.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ts-rs = { version = "12.0.1", features = ["serde-compat"] }

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
